--- a/templates/agente.html
+++ b/templates/agente.html
@@ -68,6 +68,7 @@
         .catch(err => console.error('❌ Error guardando usuario:', err));
     }
   </script>
+  <script src="{{ url_for('static', filename='js/i18n.js') }}"></script>
 </body>
 
 </html>
