--- a/templates/admin.html
+++ b/templates/admin.html
@@ -80,6 +80,7 @@
             }
         });
     </script>
+    <script src="{{ url_for('static', filename='js/i18n.js') }}"></script>
 </body>
 
 </html>
